force-app/main/default/objects/Game__c/fields/Final__c.field-meta.xml
<CustomField>
    <fullName>Final__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the score is final.</description>
    <label>Final</label>
    <type>Checkbox</type>
</CustomField>