force-app/main/default/objects/Game__c/fields/Home_Score__c.field-meta.xml
<CustomField>
    <fullName>Home_Score__c</fullName>
    <label>Home Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>