force-app/main/default/objects/Game__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <description>1 if current time is greater than game start time.</description>
    <formula>IF ( NOW() &gt;  Start_Time__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if current time is greater than game start time.</inlineHelpText>
    <label>Locked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>