force-app/main/default/objects/Game__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <formula>IF(ISBLANK(Winner__c), 0.0, IF(Winner__c == &apos;PUSH&apos;, 0.5, 1.0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>