force-app/main/default/objects/Game__c/fields/Spread__c.field-meta.xml
<CustomField>
    <fullName>Spread__c</fullName>
    <description>Point spread with respect to home team. Negative number indicates home team is favorite. Positive number indicates visiting team is favorite. Zero indicates a pick&apos;em game.</description>
    <label>Spread</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>