force-app/main/default/objects/Game__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Scheduled starting time/date of the game.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>