force-app/main/default/objects/Game__c/fields/Visiting_Score__c.field-meta.xml
<CustomField>
    <fullName>Visiting_Score__c</fullName>
    <label>Visiting Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>