force-app/main/default/objects/Game__c/fields/Visiting_Team__c.field-meta.xml
<CustomField>
    <fullName>Visiting_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visiting Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Games (Visiting Team)</relationshipLabel>
    <relationshipName>Games1</relationshipName>
    <type>Lookup</type>
</CustomField>