force-app/main/default/objects/Game__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <length>2</length>
    <type>Text</type>
</CustomField>