force-app/main/default/objects/Game__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <formula>IF (OR(ISNULL(Home_Score__c), ISNULL(Visiting_Score__c), ISNULL(Spread__c)), null,
  IF ((Home_Score__c + Spread__c) =  Visiting_Score__c , &apos;PUSH&apos;,
    IF ((Home_Score__c + Spread__c) &gt; Visiting_Score__c,   Home_Team__r.Name , Visiting_Team__r.Name)
  )
)</formula>
    <label>Winner</label>
    <type>Text</type>
</CustomField>