force-app/main/default/objects/Game__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Week__c</columns>
    <columns>NAME</columns>
    <columns>Start_Time__c</columns>
    <columns>Home_Team__c</columns>
    <columns>Home_Score__c</columns>
    <columns>Spread__c</columns>
    <columns>Visiting_Team__c</columns>
    <columns>Visiting_Score__c</columns>
    <columns>Winner__c</columns>
    <columns>Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>