force-app/main/default/objects/Game__c/listViews/Week13.listView-meta.xml
<ListView>
    <fullName>Week13</fullName>
    <columns>NAME</columns>
    <columns>Start_Time__c</columns>
    <columns>Home_Team__c</columns>
    <columns>Home_Score__c</columns>
    <columns>Spread__c</columns>
    <columns>Visiting_Team__c</columns>
    <columns>Visiting_Score__c</columns>
    <columns>Winner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Week 13</label>
</ListView>