force-app/main/default/objects/Game__c/listViews/Week6.listView-meta.xml
<ListView>
    <fullName>Week6</fullName>
    <columns>NAME</columns>
    <columns>Start_Time__c</columns>
    <columns>Home_Team__c</columns>
    <columns>Home_Score__c</columns>
    <columns>Spread__c</columns>
    <columns>Visiting_Team__c</columns>
    <columns>Visiting_Score__c</columns>
    <columns>Winner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Week__c</field>
        <operation>equals</operation>
        <value>6</value>
    </filters>
    <label>Week 6</label>
</ListView>